Fix z-index on confirm delete dialog

--- a/pod/video/static/css/comment-style.css
+++ b/pod/video/static/css/comment-style.css
@@ -243,7 +243,7 @@
 	-ms-flex-pack: center;
 	justify-content: center;
 	padding-top: 20px;
-	z-index: 9;
+	z-index: 99;
 	position: fixed;
 	left: 0;
 	right: 0;
